# customer-feedback-theme-extractor

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/api/: app.py
backend/requirements/: requirements.txt
backend/services/: file_parser.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: FeedBackUpload.tsx  FileList.tsx  Home.tsx  Uploads.tsx  index.ts
frontend/src/interfaces/: componentsInterface.ts  index.ts  reusableInterface.ts
frontend/src/reusables/: FileUpload.tsx  ProgressBar.tsx  index.ts
